Added p to label

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
 <body>
     <div class="page">
         <div class="select-dropdown">
-            <label for="interval">Select Interval</label>
+            <label for="interval">
+                <p>Select Interval</p>
+            </label>
             <select name="interval" onchange="drawLineGraph(this.value)">
                 <option value="daily">Daily</option>
                 <option value="weekly">Weekly</option>
