--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
 <body>
     <div class="page">
         <div class="select-dropdown">
-            <label for="interval">
-                <p>Select Interval</p>
-            </label>
+            <label for="interval">Select Interval</label>
             <select name="interval" onchange="drawLineGraph(this.value)">
                 <option value="daily">Daily</option>
                 <option value="weekly">Weekly</option>
